WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113903
[EFL] --minimal build fails with 'error: unused variable'
https://bugs.webkit.org/show_bug.cgi?id=113903
Summary
[EFL] --minimal build fails with 'error: unused variable'
Ed Bartosh
Reported
2013-04-03 15:29:15 PDT
./Tools/Scripts/build-webkit --efl --cmakeargs="-DSHARED_CORE=ON" --minimal fails with this error: /home/ed/git/wk/WebKit/Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp: In function `void WebCore::restartedCallback(SoupMessage*, gpointer)': /home/ed/git/wk/WebKit/Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:397:29: error: unused variable `d' [-Werror=unused-variable] [ 82%] Building CXX object Source/WebCore/CMakeFiles/webcore_efl.dir/platform/text/TextCodecICU.cpp.o [ 82%] Building CXX object Source/WebCore/CMakeFiles/webcore_efl.dir/platform/text/TextEncodingDetectorICU.cpp.o [ 82%] Building CXX object Source/WebCore/CMakeFiles/webcore_efl.dir/plugins/PluginPackageNone.cpp.o cc1plus: all warnings being treated as errors make[2]: *** [Source/WebCore/CMakeFiles/webcore_efl.dir/platform/network/soup/ResourceHandleSoup.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs.... make[1]: *** [Source/WebCore/CMakeFiles/webcore_efl.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch
(1.61 KB, patch)
2013-04-03 15:33 PDT
,
Ed Bartosh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ed Bartosh
Comment 1
2013-04-03 15:33:31 PDT
Created
attachment 196418
[details]
Patch
WebKit Review Bot
Comment 2
2013-04-04 10:47:17 PDT
Comment on
attachment 196418
[details]
Patch Clearing flags on attachment: 196418 Committed
r147642
: <
http://trac.webkit.org/changeset/147642
>
WebKit Review Bot
Comment 3
2013-04-04 10:47:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug