[EFL] --minimal build fails with 'error: unused variable' https://bugs.webkit.org/show_bug.cgi?id=113903

Patch by Ed Bartosh <bartosh@gmail.com> on 2013-04-04
Reviewed by Gustavo Noronha Silva.

Moved variable definition under #if where it's used
* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore::restartedCallback):

Canonical link: https://commits.webkit.org/132288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147642 268f45cc-cd09-0410-ab3c-d52691b4dbfc